--- a/README.rdoc
+++ b/README.rdoc
@@ -6,5 +6,5 @@ This small application called PINE is comprised of three microservices and the w
 
 * *A01377154* <em>Felipe Osornio</em>
 * *A01378838* <em>Eric Gómez</em>
-
+* *A01378916* <em>Rafael Moreno Cañas</em>
 
