--- a/README.rdoc
+++ b/README.rdoc
@@ -11,7 +11,7 @@ This small application called PINE is comprised of three microservices and the w
 == Installing and Running the Application
 To run the web application, inside the +src+ folder type the following
 instruction at the command line:
-    ruby app_router.rb
+   $ ruby app_router.rb
 
 == 4+1 architectural view model
 === Logical view
