--- a/README.rdoc
+++ b/README.rdoc
@@ -21,6 +21,7 @@ rdoc-image:img/process-view.png
 === Development view
 rdoc-image:img/development-view.png
 === Physical view
+rdoc-image:img/physical-view.png
 === Scenarios (Use case view)
 
 == Patterns used
