--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,8 @@
 = General overview
 
-This small application called PINE is comprised of three microservices and the web client.
+This is a web app to manage and take quizzes and it's written in ruby code.
+Inside the app you can upload a csv files to fill the pool of questions, but this file need to be formated in the same way that apears at the root of this repository.
+Once you have uploaded the questions you can genereate a new quiz, submiting a nickname and  the number of questions that you want.
 
 == Authors
 
@@ -9,8 +11,7 @@ This small application called PINE is comprised of three microservices and the w
 * *A01378916* <em>Rafael Moreno Cañas</em>
 
 == Installing and Running the Application
-To run the web application, inside the +src+ folder type the following
-instruction at the command line:
+To run the web application, download this repository and then inside the +src+ folder type the following instruction at the command line:
    $ ruby app_router.rb
 
 == 4+1 architectural view model
@@ -28,3 +29,4 @@ rdoc-image:img/scenarios.png
 == Patterns used
 
 == References
+- \R. Olsen. <em>Design Patterns in Ruby.</em> Addison-Wesley, 2007.
