--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,7 @@
 = General overview
 This is a web app to manage and take quizzes and it's written in ruby code.
 
-Inside the app you can upload a csv files to fill the pool of questions, but this file need to be formatted in the same way that appears at the root of this repository.
+Inside the app you can upload a csv files to fill the pool of questions, but this file need to be formatted in the same way as the file named +sample_40_questions+ that appears at the root of this repository.
 
 Once you have uploaded the questions you can generate a new quiz, submitting a nickname and the number of questions that you want.
 
